--- a/app/styles/sass/blocks/settings.scss
+++ b/app/styles/sass/blocks/settings.scss
@@ -2,9 +2,9 @@
 	position: absolute;
 	top: calc($index * 0.33);
 	bottom: calc($index * 0.33);
-	max-width: calc($index * 23);
-	padding-top: calc($index * 1.5);
-	left: -100%;		
+	max-width: calc($index * 23 * $coaficent-md);
+	padding-top: calc($index * 1.5 * $coaficent-md);
+	left: -100%;
 	transition: left 0.3s;
 	z-index: 100;
 	&__container {
@@ -34,6 +34,11 @@
 		left: 0;
 		transition: left 0.3s;
 	}
+	@include media-breakpoint-up(lg) {
+		padding-top: calc($index * 1.5);
+		max-width: calc($index * 23);
+		padding-top: calc($index * 1.5);
+	}
 }
 
 .game {
@@ -56,6 +61,9 @@
 	// .settings__progress
 
 	&__progress {
+		margin-bottom: calc($index * 1 * $coaficent-md);
+	}
+	@include media-breakpoint-up(lg) {
 		margin-bottom: calc($index * 1);
 	}
 }
@@ -65,10 +73,10 @@
 	&__title {
 		display: flex;
 		font-weight: 400;
-		font-size: calc($index * 0.5);
+		font-size: calc($index * 0.5 * $coaficent-md);
 		line-height: 1.2;
 		color: $white;
-		margin-bottom: calc($index * 0.2);
+		margin-bottom: calc($index * 0.2 * $coaficent-md);
 		text-transform: uppercase;
 	}
 
@@ -80,7 +88,7 @@
 	// .progress-block__title-category
 
 	&__title-category {
-		margin-left: 3px;
+		margin-left: calc($index * 0.1 * $coaficent-md);
 	}
 
 	// .progress-block__body
@@ -103,9 +111,9 @@
 		flex: 1 1 auto;
 		display: grid;
 		grid-template-columns: repeat(15, 1fr);
-		height: calc($index * 1.33);
-		padding: calc($index * 0.15);
-		gap: calc($index * 0.17);
+		height: calc($index * 1.33 * $coaficent-md);
+		padding: calc($index * 0.15 * $coaficent-md);
+		gap: calc($index * 0.17 * $coaficent-md);
 		span {
 			display: block;
 			background-color: #383838;
@@ -120,7 +128,7 @@
 
 	&__value {
 		font-weight: 500;
-		font-size: calc($index * 0.5);
+		font-size: calc($index * 0.5 * $coaficent-md);
 		line-height: 1.2;
 		display: flex;
 		justify-content: center;
@@ -131,14 +139,14 @@
 		span {
 			font-family: noto-sans-tm;
 			font-weight: 300;
-			font-size: calc($index * 0.67);
+			font-size: calc($index * 0.67 * $coaficent-md);
 		}
 	}
 
 	&.progress-full {
 		.progress-block__track {
 			grid-template-columns: repeat(37, 1fr);
-			height: calc($index * 1.47);
+			height: calc($index * 1.47 * $coaficent-md);
 			span {
 				&._active {
 					background-color: #ff3c48;
@@ -147,7 +155,47 @@
 		}
 		.progress-block__value {
 			span {
-				margin-right: calc($index * 0.1);
+				margin-right: calc($index * 0.1 * $coaficent-md);
+			}
+		}
+	}
+
+	@include media-breakpoint-up(lg) {
+		// .progress-block__title
+
+		&__title {
+			font-size: calc($index * 0.5);
+			margin-bottom: calc($index * 0.2);
+		}
+
+		&__title-category {
+			margin-left: calc($index * 0.1);
+		}
+
+		&__track {
+			grid-template-columns: repeat(15, 1fr);
+			height: calc($index * 1.33);
+			padding: calc($index * 0.15);
+			gap: calc($index * 0.17);
+		}
+
+		// .progress-block__value
+
+		&__value {
+			font-size: calc($index * 0.5);
+			span {
+				font-size: calc($index * 0.67);
+			}
+		}
+
+		&.progress-full {
+			.progress-block__track {
+				height: calc($index * 1.47);
+			}
+			.progress-block__value {
+				span {
+					margin-right: calc($index * 0.1);
+				}
 			}
 		}
 	}
@@ -155,9 +203,11 @@
 
 .panel-settings {
 	display: grid;
-	grid-template-columns: calc($index * 8.96) 1fr calc($index * 1.3);
+	grid-template-columns: calc($index * 8.96 * $coaficent-md) 1fr calc(
+			$index * 1.3 * $coaficent-md
+		);
 	align-items: end;
-	gap: 10px;
+	gap: calc($index * 0.33);
 	// .panel-settings__tracks
 
 	&__tracks {
@@ -169,15 +219,15 @@
 		display: grid;
 		grid-template-columns: repeat(3, 1fr);
 		gap: 2px;
-		height: calc($index * 1.47);
-		margin-bottom: calc($index * 2.23);
+		height: calc($index * 1.47 * $coaficent-md);
+		margin-bottom: calc($index * 2.23 * $coaficent-md);
 	}
 	// .panel-settings__bonus
 
 	&__bonus {
 		font-family: noto-sans-tm;
 		font-weight: 400;
-		font-size: calc($index * 0.66);
+		font-size: calc($index * 0.66 * $coaficent-md);
 		line-height: 1.3;
 		display: flex;
 		justify-content: center;
@@ -195,12 +245,12 @@
 		&::before {
 			content: "";
 			display: block;
-			width: calc($index * 0.93);
-			height: calc($index * 0.93);
+			width: calc($index * 0.93 * $coaficent-md);
+			height: calc($index * 0.93 * $coaficent-md);
 			background-position: center center;
 			background-repeat: no-repeat;
 			background-size: cover;
-			margin-right: calc($index * 0.2);
+			margin-right: calc($index * 0.2 * $coaficent-md);
 		}
 		span {
 			text-transform: uppercase;
@@ -229,7 +279,7 @@
 
 	&__progress {
 		&:not(:last-child) {
-			margin-bottom: calc($index * 0.466);
+			margin-bottom: calc($index * 0.466 * $coaficent-md);
 		}
 	}
 
@@ -254,8 +304,8 @@
 
 	&__icon {
 		position: relative;
-		width: calc($index * 1.33);
-		height: calc($index * 1.33);
+		width: calc($index * 1.33 * $coaficent-md);
+		height: calc($index * 1.33 * $coaficent-md);
 		border: 1px solid #fff;
 		opacity: 0.25;
 		transition: opacity 0.25s ease;
@@ -264,7 +314,7 @@
 		background-repeat: no-repeat;
 		background-size: 60%;
 		&:not(:last-child) {
-			margin-bottom: calc($index * 1.34);
+			margin-bottom: calc($index * 1.34 * $coaficent-md);
 		}
 		@media (any-hover: hover) {
 			&:hover {
@@ -291,6 +341,42 @@
 		}
 		&:nth-child(6) {
 			background-image: url(../images/dist/icons/bow-tie.svg);
+		}
+	}
+
+	@include media-breakpoint-up(lg) {
+		grid-template-columns: calc($index * 8.96) 1fr calc($index * 1.3);
+		gap: calc($index * 0.33);
+
+		&__bonuses {
+			gap: calc($index * 0.066);
+			height: calc($index * 1.47);
+			margin-bottom: calc($index * 2.23);
+		}
+		// .panel-settings__bonus
+
+		&__bonus {
+			font-size: calc($index * 0.66);
+			padding: calc($index * 0.26);
+			&::before {
+				width: calc($index * 0.93);
+				height: calc($index * 0.93);
+				margin-right: calc($index * 0.2);
+			}
+		}
+
+		&__progress {
+			&:not(:last-child) {
+				margin-bottom: calc($index * 0.466);
+			}
+		}
+
+		&__icon {
+			width: calc($index * 1.33);
+			height: calc($index * 1.33);
+			&:not(:last-child) {
+				margin-bottom: calc($index * 1.34);
+			}
 		}
 	}
 }
@@ -334,23 +420,4 @@
 	@include media-breakpoint-up(lg) {
 		display: block;
 	}
-}
-
-.panel-settings {
-	// .panel-settings__bonus
-
-	&__bonus {
-	}
-
-	// .panel-settings__icons
-
-	&__icons {
-	}
-
-	// .panel-settings__icon
-
-	&__icon {
-	}
-}
-.bonus-block {
 }
